# sliqec

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
cudd/: Makefile  config.status  libtool
cudd/cudd/.deps/: libcudd_la-cuddAPI.Plo  libcudd_la-cuddAddAbs.Plo  libcudd_la-cuddAddApply.Plo  libcudd_la-cuddAddWalsh.Plo  libcudd_la-cuddAndAbs.Plo  libcudd_la-cuddAnneal.Plo  libcudd_la-cuddApa.Plo  libcudd_la-cuddBddCorr.Plo  libcudd_la-cuddBddIte.Plo  libcudd_la-cuddBridge.Plo  libcudd_la-cuddCheck.Plo  libcudd_la-cuddClip.Plo  libcudd_la-cuddCof.Plo  libcudd_la-cuddEssent.Plo  libcudd_la-cuddExact.Plo  libcudd_la-cuddGenCof.Plo  libcudd_la-cuddGenetic.Plo  libcudd_la-cuddInit.Plo  libcudd_la-cuddInteract.Plo  libcudd_la-cuddLCache.Plo  libcudd_la-cuddSolve.Plo  libcudd_la-cuddSymmetry.Plo  libcudd_la-cuddUtil.Plo  libcudd_la-cuddWindow.Plo  libcudd_la-cuddZddFuncs.Plo  libcudd_la-cuddZddMisc.Plo  libcudd_la-cuddZddReord.Plo  libcudd_la-cuddZddSetop.Plo
cudd/dddmp/.deps/: libdddmp_la-dddmpBinary.Plo  libdddmp_la-dddmpDbg.Plo  libdddmp_la-dddmpNodeAdd.Plo  libdddmp_la-dddmpNodeBdd.Plo  libdddmp_la-dddmpStoreAdd.Plo  libdddmp_la-dddmpStoreBdd.Plo  libdddmp_la-dddmpStoreCnf.Plo
include/: bddSystem.h  memMeasure.h  qCkt.h  qcCheck.h
lib/sliqsys/: CMakeLists.txt
lib/sliqsys/cudd/: Makefile  config.h  config.status  libtool
lib/sliqsys/cudd/autom4te.cache/: requests
lib/sliqsys/cudd/cplusplus/.deps/: libobj_la-cuddObj.Plo
lib/sliqsys/cudd/cudd/.deps/: libcudd_la-cuddAddFind.Plo  libcudd_la-cuddAddInv.Plo  libcudd_la-cuddAddIte.Plo  libcudd_la-cuddAddNeg.Plo  libcudd_la-cuddApprox.Plo  libcudd_la-cuddBddAbs.Plo  libcudd_la-cuddCache.Plo  libcudd_la-cuddCompose.Plo  libcudd_la-cuddDecomp.Plo  libcudd_la-cuddExport.Plo  libcudd_la-cuddGroup.Plo  libcudd_la-cuddHarwell.Plo  libcudd_la-cuddLevelQ.Plo  libcudd_la-cuddLinear.Plo  libcudd_la-cuddLiteral.Plo  libcudd_la-cuddMatMult.Plo  libcudd_la-cuddPriority.Plo  (+16 more)
lib/sliqsys/include/: bddSystem.h  qCkt.h
lib/sliqsys/src/: CMakeLists.txt  gateOpe.cpp  misc.cpp  propCheck.cpp  qasmParser.cpp
src/: CMakeLists.txt  bddSystem.h  gateOpe.cpp  main.cpp  memMeasure.cpp  misc.cpp  propCheck.cpp  qCkt.h  qasmParser.cpp  qcCheck.cpp  qcCheck.h
test/: genRandom.py  removeGates.py  replaceCCX.py  test.py
(+6 files in other folders)
